02/demos/demos/demo3/details-bad-release.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: details-v1
  labels:
    app: details
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: details
      version: v1
  template:
    metadata:
      labels:
        app: details
        version: v1
    spec:
      serviceAccountName: bookinfo-details
      containers:
        - name: details
          image: docker.io/sixeyed/examples-bookinfo-details-v1:1.18.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9080
